--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -1,15 +1,15 @@
 <% include ../partials/head %>
 
-<div class="container container-single">
-	<div class="single-wrapper">
-		<div class="col-md-10 offset-md-1 wrapper">
+<div class="full-container" id="container-cart">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1 p-0">
 			<% if (locals.order.status !== "Cancelled" && locals.order.status !== "Submitted" && locals.order.status !== "Completed" && locals.order.status !== "awaitingStripePayment") { %>
 			<input type="submit" data-id="<%= locals.order._id %>" class="cancelbtn" value="CANCEL ORDER" />
 			<% } %> <% if (locals.order && locals.order.items) { %>
-			<h1 class="single-title text-center">Your Order</h1>
+			<h1 class="square-title text-center">Your Order</h1>
 
 			<div class="text-center w-100"></div>
-			<div class="recap-box">
+			<div class="payment-div">
 				<h4>Status - <b><%= locals.order.status %></b></h4>
 				<h4>Total Price - <b><%= locals.order.price %>€</b></h4>
 
@@ -27,7 +27,7 @@
 			<% } %>
 		</div>
 
-		<div class="col-md-10 offset-md-1 p-0">
+		<div class="col-md-10 offset-md-1 mt-2 p-0">
 			<div class="cart-row" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
 				<span class="cart-quantity cart-header cart-column">QUANTITY</span>
@@ -61,9 +61,13 @@
 			</div>
 			<% }) %>
 		</div>
+	</div>
+</div>
 
-		<div class="col-md-10 offset-md-1 wrapper">
-			<h1 class="single-title text-center">Delivery Informations</h1>
+<div class="full-container" id="container-cart">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1 p-0">
+			<h1 class="square-title text-center">Delivery Address</h1>
 			<div class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not <a href="/User">change your delivery address</a></div>
 
 			<div class="row">
