--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -1,9 +1,8 @@
 <% include partials/head %>
 
-    <div class="full-container" id="container-login">
-<div class="container container-front"> 
-
-		<div id="login" class="tab col-md-10 offset-md-1 row">
+<div class="full-container" id="container-login">
+	<div class="container container-front">
+		<div id="login" class="tab col-lg-10 offset-lg-1 row">
 			<div class="container p-0 m-0 h-100" id="container">
 				<div class="form-slider-container sign-up-container">
 					<form class="form-slider" id="register" data-subreg="true" method="POST" action="/api/auth/register">
@@ -12,18 +11,10 @@
 						<input placeholder="Jean75" type="text" name="name" id="name" data-vstring="4;30" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required />
 						<span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
 
-						<input
-							placeholder="jeandupont@gmail.com"
-							type="email"
-							name="email"
-							id="email"
-							data-vemail="true"
-							value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
-							required
-						/>
+						<input placeholder="jeandupont@gmail.com" type="email" name="email" id="email" data-vemail="true" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required />
 						<span id="i_email" class="form-info">E-mail has to be valid</span>
 
-						<input placeholder="Password" type="password" name="password" id="password" data-vpw="true"  required />
+						<input placeholder="Password" type="password" name="password" id="password" data-vpw="true" required />
 						<span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to beatleast alphanumeric</span>
 
 						<input placeholder="Password (confirm)" type="password" name="password2" id="password2" data-vpw2="true" required />
@@ -31,15 +22,12 @@
 
 						<div class="recaptcha-wrapper"></div>
 
-						<label class="control-label text-center">
-							By checking this box I hereby declare that I have read and agree to the <a href="/Legals#tos">Terms of Service</a></a>
-						</label>
+						<label class="control-label text-center"> By checking this box I hereby declare that I have read and agree to the <a href="/Legals#tos">Terms of Service</a> </label>
 						<input type="checkbox" name="agree_tos" id="agree_tos" required />
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 						<input type="submit" class="logbtn" value="Sign up" id="submit-register" />
 					</form>
 				</div>
-		
 
 				<div class="form-slider-container sign-in-container">
 					<form class="form-slider" id="login-form" method="POST" data-sublogin="true" action="/api/auth/login">
@@ -69,29 +57,39 @@
 				</div>
 			</div>
 		</div>
-			</div>
-		</div>
+	</div>
+</div>
 
-		    <div class="full-container" id="container-lostpw">
-<div class="container container-front"> 
-
+<div class="full-container" id="container-lostpw">
+	<div class="container container-front">
 		<div id="lostpw-container" class="tab col-md-12">
 			<div class="container p-0 m-0 h-100">
 				<div class="col-md-12 wrapper lostpw-container">
-						<h1 class="square-title text-center">Password Recovery</h1>
-						<div class="alert alert-info alert-static" role="alert">
-							We'll send you a mail with instructions to reset your password
-						</div>
-						<form class="col-md-8 offset-md-2 mt-5" id="lostpw" data-lostpw="true" method="POST" action="/api/user/lostpw">
-							<input placeholder="Email" type="email" id="email-reset" name="email" value="" data-vemail="true" required />
-							<span id="i_email-reset" class="form-info">E-mail has to be valid</span>
+					<h1 class="square-title text-center">Password Recovery</h1>
 
-							<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-							<div class="text-center">
+					<form class="col-md-10 offset-md-1" id="lostpw" data-lostpw="true" method="POST" action="/api/user/lostpw">
+						<div class="row">
+							<div class="col-lg-10 offset-lg-1">
+								<div class="alert alert-info alert-static w-100" role="alert">
+									We'll send you a mail with instructions to reset your password
+								</div>
+							</div>
+							<div class="col-lg-10 offset-lg-1 mt-2 mb-2">
+								<label class="control-label">Email</label>
+								<input placeholder="youremail@gmail.com" type="email" id="email-reset" name="email" value="" data-vemail="true" required />
+								<span id="i_email-reset" class="form-info">E-mail has to be valid</span>
+							</div>
+						</div>
+						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+						<div class="row captcha-row">
+							<div class="col-lg-5 offset-lg-1">
 								<div class="recaptcha-wrapper"></div>
 							</div>
-							<input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw" />
-						</form>
+							<div class="col-lg-5">
+								<input type="submit" class="submit-btn captcha-btn" value="Send" id="submit-lostpw" />
+							</div>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
