--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -1,9 +1,9 @@
 <% include partials/head %>
 
-<div class="container container-single">
-	<div class="single-wrapper">
-		<div class="col-md-10 offset-md-1 wrapper h-100">
-			<h1 class="single-title text-center">Billing Address</h1>
+<div class="full-container">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1">
+			<h1 class="square-title text-center">Billing Address</h1>
 			<form id="deliveryform" method="POST" action="">
 				<div class="row">
 					<div class="col-md-6">
@@ -52,16 +52,14 @@
 							<input id="country" name="country" placeholder="France" value="<%= locals.billing.country %>" required />
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-12 text-center">
+					<div class="row mt-3">
+						<div class="col-md-6 text-center">
 							<label class="control-label col-md-12 text-center"> By checking this box I hereby declare that I have read and agree to the <a href="/Legals#sales">Terms of Sales</a> </label>
 							<input type="checkbox" name="agree_tos" id="agree_tos" required />
 						</div>
-					</div>
-					<div class="row mt-4">
-						<div class="col-md-6 offset-md-3">
+						<div class="col-md-6">
 							<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-							<input type="submit" class="logbtn" value="Save and go to checkout" id="submit-deliveryform" />
+							<input type="submit" class="submit-btn" value="Save and go to checkout" id="submit-deliveryform" />
 						</div>
 					</div>
 				</div>
