--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -1,16 +1,24 @@
 <% include partials/head %>
 
-<div class="container container-single">
-	<div class="single-wrapper">
-	
-		<div class="col-md-10 offset-md-1 wrapper p-0">
-			<div class="text-center">
-				<b class="alertEmpty text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
-			</div>
-		</div>
-		<% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %> 
+<div class="full-container">
+	<div class="container container-front">
+		<% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %>
 		<div class="col-md-10 offset-md-1 p-0">
-			<div class="cart-row" id="cart-row-header">
+			<h1 class="square-title text-center">Your Cart</h1>
+
+			<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
+			<div class="col-md-12 mt-3 mb-3 payment-div">
+				<span id="total-price-span">Total Price - <b id="total-price"><%= locals.totalPrice %>€</b></span>
+				<span id="total-qty-span">Total Quantity - <b id="total-qty"><%= locals.totalQty %></b></span>
+				<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
+				<span id="delivery-price-span">Shipping Price - <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
+				<% } else { %>
+				<span id="delivery-price-span">Shipping Price - <b id="delivery-price">FREE</b></span>
+				<% } %>
+			</div>
+			<% } %>
+
+			<div class="cart-row mt-2" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
 				<span class="cart-quantity cart-header cart-column">QUANTITY</span>
 				<span class="cart-price cart-header cart-column">PRICE</span>
@@ -34,16 +42,18 @@
 					<% if (locals.products[index].isUnique === true) { %>
 					<i class="fas fa-minus fa-2x qty-update" data-delcart="<%= locals.products[index].item._id %>"></i>
 					<input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" readonly />
-					<i class="fas fa-plus fa-2x qty-update plus-unique" min="0" ></i>
+					<i class="fas fa-plus fa-2x qty-update plus-unique" min="0"></i>
 					<% } else { %>
 					<i class="fas fa-minus fa-2x qty-update" data-pdel="true" data-id="<%= locals.products[index].item._id %>" data-reference="<%= index %>"></i>
 					<input
 						id="qty-<%= locals.products[index].item._id %>-<%= index %>"
-						class="cart-item-qty "
+						class="cart-item-qty"
 						value="<%= locals.products[index].qty %>"
 						name="cart-item-qty"
 						title="Numbers only"
-						data-pupd="true" data-id="<%= locals.products[index].item._id %>" data-reference="<%= index %>"
+						data-pupd="true"
+						data-id="<%= locals.products[index].item._id %>"
+						data-reference="<%= index %>"
 					/>
 					<i class="fas fa-plus fa-2x qty-update" min="0" data-padd="true" data-id="<%= locals.products[index].item._id %>" data-reference="<%= index %>"></i>
 					<% } %>
@@ -57,123 +67,105 @@
 				</div>
 			</div>
 
-			<% }) %></div> <% } %>
+			<% }) %>
+		</div>
+		<% } %>
+	</div>
+</div>
 
-
-			<div class="col-md-10 offset-md-1 wrapper z-0">
-				<h1 class="single-title text-center">Delivery Informations</h1>
-				<div class="alert alert-info alert-static w-100 mb-3" role="alert">
-									Make sure these informations are correct, if not <a href="/User">change your delivery address</a>
-								</div>
-				<div class="row">
-					<div class="col-md-6">
-						<label class="control-label">Last Name</label>
-						<input
-							id="lastname"
-							name="lastname"
-							placeholder="Doe"
-							value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>"
-							required disabled
-						/>
-						<span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
-					</div>
-					<div class="col-md-6">
-						<label class="control-label">First Name</label>
-						<input
-							id="firstname"
-							name="firstname"
-							placeholder="John"
-							value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>"
-							required disabled
-						/>
-						<span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-12">
-				<label class="control-label">Address</label>
-				<input
-					id="autocomplete"
-					name="fulltext_address"
-					placeholder="Enter your address"
-					value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>"
-					required disabled
-				/>
-					</div>
-				</div>
-
-				<div id="address">
-					<div class="row">
-						<div class="col-md-12">
-							<label class="control-label">Street</label>
-							<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required disabled />
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<label class="control-label">City</label>
-							<input id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required disabled />
-						</div>
-						<div class="col-md-6">
-							<label class="control-label">State</label>
-							<input id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required disabled />
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<label class="control-label">Postal Code</label>
-							<input id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required disabled />
-						</div>
-						<div class="col-md-6">
-							<label class="control-label">Country</label>
-							<input id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required disabled />
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-					<label class="control-label">Additional informations</label>
-				<input
-					id="instructions"
-					name="instructions"
-					placeholder="Door code or other useful informations..."
-					value="<% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %>"
-					readonly disabled
-				/>
-				</div>
-				</div>
-
-				<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
-				<div class="col-md-6 offset-md-3 mt-4">
-					<div class="payment-div p-3 text-center">
-						<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
-						<span id="delivery-price-span">Shipping Price - <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
-						<% } else { %>
-						<span id="delivery-price-span">Shipping Price - <b id="delivery-price">FREE</b></span>
-						<% } %>
-						<br />
-
-						<span id="total-qty-span">Total Quantity - <b id="total-qty"><%= locals.totalQty %></b></span>
-						<br />
-				
-						<span id="total-price-span">Total Price - <b id="total-price"><%= locals.totalPrice %>€</b></span>
-						<a href="/Billing" class="linkbtn"><button class="logbtn" type="button" id="purchase">Go to Payment</button></a>
-					</div>
-				</div>
-				<% } %>
+<div class="full-container" id="container-cart">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1 p-0">
+			<div class="text-center">
+				<b class="alertEmpty text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
 			</div>
+		</div>
+
+		<div class="col-md-10 offset-md-1 p-0">
+			<h1 class="square-title text-center">Delivery Informations</h1>
+			<div class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not <a href="/User" target="_blank">change your delivery address</a></div>
+			<div class="row">
+				<div class="col-md-6">
+					<label class="control-label">Last Name</label>
+					<input id="lastname" name="lastname" placeholder="Doe" value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>" required disabled />
+					<span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
+				</div>
+				<div class="col-md-6">
+					<label class="control-label">First Name</label>
+					<input id="firstname" name="firstname" placeholder="John" value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>" required disabled />
+					<span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12">
+					<label class="control-label">Address</label>
+					<input
+						id="autocomplete"
+						name="fulltext_address"
+						placeholder="Enter your address"
+						value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>"
+						required
+						disabled
+					/>
+				</div>
+			</div>
+
+			<div id="address">
+				<div class="row">
+					<div class="col-md-12">
+						<label class="control-label">Street</label>
+						<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required disabled />
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<label class="control-label">City</label>
+						<input id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required disabled />
+					</div>
+					<div class="col-md-6">
+						<label class="control-label">State</label>
+						<input id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required disabled />
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<label class="control-label">Postal Code</label>
+						<input id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required disabled />
+					</div>
+					<div class="col-md-6">
+						<label class="control-label">Country</label>
+						<input id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required disabled />
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<label class="control-label">Additional informations</label>
+					<input
+						id="instructions"
+						name="instructions"
+						placeholder="Door code or other useful informations..."
+						value="<% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %>"
+						readonly
+						disabled
+					/>
+				</div>
+			</div>
+
+			<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
+
+			<div class="col-md-12 p-0">
+				<a href="/Billing" class="linkbtn"><button class="submit-btn" type="button" id="purchase">Go to Payment</button></a>
+			</div>
+			<% } %>
 		</div>
 	</div>
 </div>
 
-<% if(locals.products){ %>
-	<% Object.keys(locals.products).forEach(function (index) { %>
-		<% if (!locals.products[index].item.price) { %>
-			<input type="hidden" data-index="<%= index %>" data-sku="<%= locals.products[index].attributes.SKU %>" data-attributes="<%= locals.products[index].stringifiedAttributes %>" />
-		<% } %>
-	<% }) %> 
-<% } %> 
+<% if(locals.products){ %> <% Object.keys(locals.products).forEach(function (index) { %> <% if (!locals.products[index].item.price) { %>
+<input type="hidden" data-index="<%= index %>" data-sku="<%= locals.products[index].attributes.SKU %>" data-attributes="<%= locals.products[index].stringifiedAttributes %>" />
+<% } %> <% }) %> <% } %>
 
 <script src="/scripts/cart.js" defer></script>
 <% include partials/footer %>
