--- a/views/restricted/Admin.ejs
+++ b/views/restricted/Admin.ejs
@@ -1,7 +1,8 @@
 <% include ../partials/head %>
 
-<div class="container container-single">
-    <div class="single-wrapper admin-panel">
+<div class="full-container" >
+	<div class="container admin-panel">
+        <h1 class="square-title text-center">Admin Panel</h1>
         <div class="row justify-content-center">
             <a class="admin-section-block col-lg-3" href="/Admin/Orders">Orders</a>
             <a class="admin-section-block col-lg-3" href="/Admin/Galerie/Post">Galerie</a class="admin-section-block col-3">
@@ -12,5 +13,5 @@
         </div>
     </div>
 </div>
-  
+ 
 <% include ../partials/footer %>
