--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -1,11 +1,10 @@
 <% include ../partials/head %>
 
-<div class="container container-single">
-	<div class="single-wrapper">
-		<div class="col-md-10 offset-md-1 wrapper">
-			<h1 class="single-title text-center">Modifier un ticket de blog</h1>
+<div class="full-container" id="container-admin">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1">
+			<h1 class="square-title text-center">Modifier un blog</h1>
 			<form id="blog" method="POST" action="/api/blog/patch/<%= locals.blog.id %>">
-				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.blog.title %>" data-vstring="1;256" required />
@@ -19,7 +18,7 @@
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<input type="submit" class="logbtn" value="Mettre à jour" id="submit-blog" />
+				<input type="submit" class="submit-btn" value="Mettre à jour" id="submit-blog" />
 			</form>
 			<form class="mt-3" method="POST" action="/api/blog/delete/<%= locals.blog.id %>">
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
