--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -1,12 +1,12 @@
 <% include ../partials/head %>
 
 <script src="/scripts/core/bootstrap-tagsinput.js"></script>
-<div class="container container-single">
-	<div class="single-wrapper">
-		<div class="col-md-10 offset-md-1 wrapper">
-			<h1 class="single-title text-center">Ajouter une image à la galerie</h1>
+
+<div class="full-container" id="container-admin">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1">
+			<h1 class="square-title text-center">Ajouter à la galerie</h1>
 			<form id="gallery" method="POST" action="/api/gallery/post" data-postgal="true" enctype="multipart/form-data">
-				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input type="text" name="title" id="title" placeholder="Titre" data-vstring="1;256" required />
@@ -31,7 +31,7 @@
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<input type="submit" class="logbtn" value="Valider" id="submit-gallery" />
+				<input type="submit" class="submit-btn" value="Valider" id="submit-gallery" />
 			</form>
 		</div>
 	</div>
