--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -1,11 +1,10 @@
 <% include ../partials/head %>
 
-<div class="container container-single">
-	<div class="single-wrapper">
-		<div class="col-md-10 offset-md-1 wrapper">
-			<h1 class="single-title text-center">Modifier un item de la boutique</h1>
+<div class="full-container" id="container-admin">
+	<div class="container container-front">
+		<div class="col-md-10 offset-md-1">
+			<h1 class="square-title text-center">Modifier la boutique</h1>
 			<form id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" data-patchshop="true" data-id="<%= locals.shop._id %>">
-				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.shop.title %>" data-vstring="1;256" required />
@@ -38,7 +37,7 @@
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<input type="submit" class="logbtn" value="Mettre à jour" id="submit-shop" />
+				<input type="submit" class="submit-btn" value="Mettre à jour" id="submit-shop" />
 			</form>
 			<form class="mt-3" method="POST" action="/api/shop/delete/<%= locals.shop._id %>">
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
