--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -60,7 +60,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-lostpw">
+<div class="full-container even" id="container-lostpw">
 	<div class="container container-front">
 		<div id="lostpw-container" class="tab col-md-12">
 			<div class="container p-0 m-0 h-100">
