--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -1,8 +1,8 @@
 <% include partials/head %>
 
-<div class="container container-single">
-	<div id="container-shop" class="single-wrapper col-md-12">
-		<h1 class="single-title text-center mt-2 p-2 cwhite">Unique Painting</h1>
+<div class="full-container" id="container-landing">
+	<div class="container">
+		<h1 class="square-title text-center">Unique Paintings</h1>
 		<div class="alert alert-info alert-static w-100 mb-3" role="alert">
 			We also sell great quality reproductions in all sizes and shapes, for more information check the <a href="/Catalog">Catalog</a>
 		</div>
