--- a/views/User.ejs
+++ b/views/User.ejs
@@ -87,7 +87,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-delivery">
+<div class="full-container even" id="container-delivery">
 	<div class="container container-front">
 		<div id="delivery" class="tab col-md-12">
 			<div class="col-md-10 offset-md-1 p-2 delivery">
