--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,7 +55,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-bio">
+<div class="full-container even" id="container-bio">
 	<div class="container container-front">
 		<div class="biography wrapper pb-0 pt-4">
 			<div class="bio-img-wrapper col-sm-4 z-0">
@@ -157,7 +157,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-social">
+<div class="full-container even" id="container-social">
 	<div class="container container-front">
 		<h1 class="square-title text-center">Social Medias</h1>
 		<ul class="footer-list text-center">
