--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -64,7 +64,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-cart">
+<div class="full-container even" id="container-cart">
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1 p-0">
 			<h1 class="square-title text-center">Delivery Address</h1>
