--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,11 @@
 	--brand-blue-p1: #03326d;
 	--brand-blue-p2: #032652;
 
+	--primary-light: #011792;
+	--primary-dark: #000c70;
+	--secondary-light: #00339a;
+	--secondary-dark: #002d88;
+
 	/*--brand-blue-m2: #0070c1;
 	--brand-blue-m1: #0d5a91;
 	--brand-blue: #0a3d62;
@@ -37,19 +42,29 @@
 
 .full-container {
 	flex: 1;
-	background: linear-gradient(to bottom, #1a2271, #040450);
+	background: linear-gradient(to bottom, var(--primary-light), var(--primary-dark));
 }
 
 .full-container .square-title {
-	color: #372ac7;
+	color: var(--light-shade);
 }
 
 .full-container.even {
-	background: linear-gradient(to bottom, #3227b1, #2c21ab);
-	color: var(--brand-blue-p2);
+	background: linear-gradient(to bottom, var(--secondary-light), var(--secondary-dark));
+	color: var(--dark-shade-p1);
 }
 
 .full-container.even .square-title {
+	color: var(--dark-shade-p1);
+}
+
+.full-container.blog-container {
+	flex: 1;
+	background: var(--light-shade);
+}
+
+.full-container.blog-container.even {
+	background: var(--light-shade-m1);
 	color: var(--brand-blue-p2);
 }
 
@@ -123,7 +138,7 @@
 }
 
 .ql-toolbar.ql-snow {
-	background: var(--light-shade-m1)
+	background: var(--light-shade-m1);
 }
 
 #cookies-eu-banner {
@@ -242,7 +257,7 @@ input[type="radio"] {
 }
 
 html {
-	background: #1a2271
+	background: linear-gradient(to bottom, var(--primary-light), var(--primary-dark));
 	/*
 	background: #028cb2; 
 	background: -moz-linear-gradient(top, #028cb2 0%, #025a7f 39%, #004460 100%);
@@ -310,11 +325,11 @@ b {
 .front-form {
 	margin-bottom: 15px;
 	padding: 15px;
-	background: linear-gradient(to bottom, #1a2271, #040450);
+	background: linear-gradient(to bottom, var(--primary-light), var(--primary-dark));
 }
 
-.front-form.even{
-		background: linear-gradient(to bottom, #3227b1, #2c21ab);
+.front-form.even {
+	background: linear-gradient(to bottom, var(--secondary-light), var(--secondary-dark));
 }
 
 .lostpw-container {
@@ -381,7 +396,7 @@ header {
 	border-bottom: 2px solid transparent;
 	margin-bottom: 0em;
 	z-index: 100;
-	background: #1a2271;
+	background: var(--primary-light);
 }
 
 header:hover {
@@ -710,13 +725,6 @@ footer {
 	color: var(--brand-blue-m2) !important;
 	background-color: #e6e6e6 !important;
 	border: none !important;
-	-webkit-box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23) !important;
-	-moz-box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23) !important;
-	box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23) !important;
-}
-
-#tags {
-	padding: 0;
 	-webkit-box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23) !important;
 	-moz-box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23) !important;
 	box-shadow: 1px 1px 5px -2px rgba(42, 67, 111, 0.67), -1px -1px 5px -2px rgba(155, 183, 232, 0.23) !important;
@@ -1108,15 +1116,12 @@ div.carousel-item.active {
 }
 
 .blog-row {
-	background: #e6e6e6;
+	background: transparent;
 	display: flex;
 	flex-direction: column;
 	position: relative;
 	padding: 15px 30px;
-	margin: 45px 0;
-	box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
-	-webkit-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
-	-moz-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
+	margin: 0 45px;
 }
 
 .blog-title a {
@@ -1167,10 +1172,6 @@ div.carousel-item.active {
 	position: relative;
 	bottom: -7px;
 	text-indent: 30px;
-}
-
-.blog-header {
-	background-color: #e6e6e6;
 }
 
 .wrapper {
@@ -1258,7 +1259,9 @@ div.carousel-item.active {
 .single-content {
 	white-space: pre-wrap;
 	word-break: break-word;
-	font-size: 17px;
+	font-size: 18px;
+	padding: 0 15px;
+	margin-bottom: 0;
 }
 
 .single-wrapper .blog-author {
@@ -1271,7 +1274,6 @@ div.carousel-item.active {
 	padding: 0 !important;
 }
 
-.container .blog-row,
 .container .resetpw,
 .container .carousel-container,
 .container .single-wrapper,
@@ -1283,7 +1285,6 @@ div.carousel-item.active {
 	-moz-box-shadow: none;*/
 }
 
-.container .blog-row:before,
 .container .resetpw:before,
 .container .carousel-container:before,
 .container .payment-form-wrapper:before,
@@ -1355,10 +1356,9 @@ div.carousel-item.active {
 }
 
 .blog-content {
-	background-color: #e6e6e6;
+	background-color: var(--light-shade-m1);
 	word-break: break-all;
 	overflow-wrap: break-word;
-	padding: 15px 30px;
 }
 
 .single-blog-img {
@@ -1409,8 +1409,6 @@ div.carousel-item.active {
 #container-admin .control-label {
 	color: var(--light-shade);
 }
-
-
 
 .submit-btn {
 	display: block;
@@ -2283,7 +2281,7 @@ tbody tr:hover {
 	display: grid;
 	margin-right: auto;
 	margin-left: auto;
-	background-color: var(--brand-blue-p1);
+	background-color: transparent;
 	line-height: 0;
 	-webkit-column-count: 3;
 	-webkit-column-gap: 0px;
@@ -2376,13 +2374,6 @@ tbody tr:hover {
 .catalog-header-btn {
 	justify-content: space-around;
 	display: flex;
-}
-
-.container-catalog {
-	background-color: var(--brand-blue-p1) !important;
-	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
-	-webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
 .catalog-title-category {
