--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,13 +1,15 @@
 <% include partials/head %>
 
-<div class="container">
-        <div class="wrapper-404">
-                <h1>404</h1>
-                <h5>You appear to be lost, click this button !</h6>
-                <form action="/">
-                        <button class="btn-404"><i class="fas fa-home fa-2x"></i></button>
-                </form>
-        </div> 
+<div class="full-container" id="container-landing">
+	<div class="container container-front">
+		<div class="wrapper-404">
+			<h1>404</h1>
+			<h5>You appear to be lost, click this button !</h5>
+			<form action="/">
+				<button class="btn-404"><i class="fas fa-home fa-2x"></i></button>
+			</form>
+		</div>
+	</div>
 </div>
-  
+
 <% include partials/footer %>
