--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -73,7 +73,7 @@
 	</div>
 </div>
 
-<div class="full-container" id="container-cart">
+<div class="full-container even" id="container-cart">
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1 p-0">
 			<div class="text-center">
