--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -54,7 +54,7 @@
 
 			<nav class="navbar-container">
 				<nav class="navbar-custom">
-					<a href="/"><img al="Maral Abkarian Paiting Logo" class="logo" src="/svg/logo.svg" /></a>
+					<a href="/"><img al="Maral Abkarian Paiting Logo" class="logo" src="/svg/logo_white.svg" /></a>
 					<ul class="nav-links">
 						<% if (locals.user && locals.user.role === "admin") { %>
 						<li>
