--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -24,7 +24,7 @@
 				</div>
 			</form>
 			<% } else { %>
-			<form class="text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data">
+			<form class="text-center front-form <% if (index % 2 === 0) { %>even<% } %>" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup<%= index %>">
 					<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
 					<input type="file" name="img" id="upload<%= index %>" class="inputfile" />
@@ -40,7 +40,7 @@
 				</div>
 			</form>
 			<% } %> <% } %> <% } else { %>
-			<form class="text-center front-form" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data">
+			<form class="text-center front-form <% if (index % 2 === 0) { %>even<% } %>" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup0">
 					<label for="upload0" class="filebtn">Choisir une image</label>
 					<input type="file" name="img" id="upload0" class="inputfile" />
