--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -4,10 +4,10 @@
 <script src="/scripts/pwinty/pwinty-exports.js"></script>
 <script src="/scripts/pwinty/pwinty-products.js"></script>
 
-<div class="container container-single"> 
-  <div class="single-wrapper mt-3">
+<div class="full-container" id="container-landing">
+	<div class="container container-front">
   <% if (locals.gallery) { %>
-    <div class="col-md-10 offset-md-1 content-wrapper" id="<%= locals.gallery._id %>">
+    <div class="col-md-12 content-wrapper" id="<%= locals.gallery._id %>">
       <div class="carousel-container">
         <div id="carousel-thumb" class="carousel slide carousel-thumbnails" data-ride="carousel">
           <div class="carousel-inner" role="listbox">
@@ -45,22 +45,22 @@
         </ol>
       </div>
 
-      <div class="blog-content col-md-12 mt-3 pt-4">
-         <h3 class="single-title col-md-12 mb-0"><%= locals.gallery.title %>  <% if (locals.user && locals.user.role === "admin") { %>
+      <div class="blog-content col-md-10 offset-md-1 mt-2">
+         <h1 class="single-title col-md-12 mb-0"><%= locals.gallery.title %>  <% if (locals.user && locals.user.role === "admin") { %>
           <a href="/Admin/Galerie/Patch/<%= locals.gallery._id %>"><i class="fas fa-edit"></i></a>
-        <% } %> </h3>
-        <p class="p-4 mb-0 single-content">
+        <% } %> </h1>
+        <p class="single-content">
           <%= locals.gallery.content %>
         </p>
       </div>
 
-      <div class="text-center tags-wrapper m-2 mb-3">
+      <div class="text-center tags-wrapper mb-3">
         <% locals.gallery.tags.forEach(function (tag) { %>
           <a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
         <% }) %>
       </div>
 
-      <div class="col-md-12 text-center">
+      <div class="col-md-10 offset-md-1 text-center p-0">
         <div class="alert alert-danger alert-static w-100" role="alert">
             For references, check the <a href="/Catalog" target="_blank">CATALOG</a>
         </div>
@@ -88,16 +88,16 @@
                 <input class="pwinty-input" name="pwinty-category" id="canvas" value="CAN" type="radio" >
               </div>
             </label>
-          </div><hr class="hr-pwinty"/>
+          </div>
 
-          <div class="form-group text-center pwinty-wrapper" id="subcategories"></div><hr class="hr-pwinty"/>
+          <div class="form-group text-center pwinty-wrapper" id="subcategories"></div>
           <div class="form-group text-center pwinty-wrapper" id="attributes"></div>
         </div>
 
         <div class="pbox-wrapper">
           <div id="purchasebox" class="col-md-6 offset-md-3 text-center nodisplay">
             <span id="price" class="card-price "></span>
-            <input type="submit" data-addpwinty="<%= locals.gallery._id %>" class="logbtn" value="Add to cart" >
+            <input type="submit" data-addpwinty="<%= locals.gallery._id %>" class="submit-btn" value="Add to cart" >
           </div>
         </div>
     </div>
